// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build fs output: 00 manifest.json 1`] = `
Object {
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/content-script-loader.content1.ts.hash.hash.js",
      ],
      "matches": Array [
        "https://google.com/*",
      ],
    },
    Object {
      "js": Array [
        "assets/content-script-loader.content2.ts.hash.hash.js",
      ],
      "matches": Array [
        "https://bing.com/*",
      ],
    },
  ],
  "manifest_version": 3,
  "name": "test extension",
  "version": "0.1.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "https://google.com/*",
      ],
      "resources": Array [
        "assets/content1.ts.hash.js",
        "assets/image.hash.png",
        "assets/script.ts.hash.js",
      ],
      "use_dynamic_url": true,
    },
    Object {
      "matches": Array [
        "https://bing.com/*",
      ],
      "resources": Array [
        "assets/content2.ts.hash.js",
        "assets/font.hash.otf",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`build fs output: 01 output files 1`] = `
Array [
  "assets/content-script-loader.content1.ts.hash.hash.js",
  "assets/content-script-loader.content2.ts.hash.hash.js",
  "assets/content1.ts.hash.js",
  "assets/content2.ts.hash.js",
  "assets/font.hash.otf",
  "assets/image.hash.png",
  "assets/script.ts.hash.js",
  "manifest.json",
]
`;

exports[`build fs output: assets/content-script-loader.content1.ts.hash.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content1.ts.hash.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`build fs output: assets/content-script-loader.content2.ts.hash.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content2.ts.hash.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`build fs output: assets/content1.ts.hash.js 1`] = `
"var icon = \\"/assets/image.hash.png\\";

var script = \\"/assets/script.ts.hash.js\\";

console.log(\\"content.ts\\", { icon, script });
"
`;

exports[`build fs output: assets/content2.ts.hash.js 1`] = `
"var font = \\"/assets/font.hash.otf\\";

console.log(\\"content2.ts\\", { font });
"
`;

exports[`build fs output: assets/script.ts.hash.js 1`] = `
"console.log(\\"main world script\\");
"
`;
